Upload completed assignment

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
         let playerInput = 'SCIsSORS'
 
-        rounds = 1
+        x = 1
         playerscore = 0
         computerscore = 0
 
-        while (rounds <= 5)
+        while (x <= 5)
         {
             game()
 
