--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
     <script>
 
-        let playerInput = 'SCIsSORS'
 
         x = 1
         playerscore = 0
@@ -21,6 +20,9 @@
 
         while (x <= 5)
         {
+            let ask = prompt("Type Rock, Paper or Scissors")
+            playerInput = ask.toString()
+
             game()
 
             /* add round result to overall tally */
